Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <p>Install a copy of the HRR MetaData repository and a self contained web-server into your local environment.</p>
 
-<p>Donwload and execute the <a href="https://github.com/hrrno/datamunger/blob/develop/Munger/Scripts/install-metadata-webserver.fsx">installation script</a> in the desired folder.  [Requires mono/.NET]</p>
+<p>Right click to 'save as...', then execute the <a href="https://raw.githubusercontent.com/hrrno/datamunger/develop/Munger/Scripts/install-metadata-webserver.fsx">installation script</a> in the desired folder.  [Requires mono/.NET]</p>
 
 <h2>
 <a id="available-metadata" class="anchor" href="#available-metadata" aria-hidden="true"><span class="octicon octicon-link"></span></a>Available Metadata</h2>
@@ -54,8 +54,8 @@
 </tr>
 <tr>
 <td>MFR</td>
-<td>MFR Base Structure</td>
-<td>SQL</td>
+<td><a href="https://github.com/hrrno/metadata/blob/master/registries/mfr/data/structure/mfr_all_fields.sql">MFR Base Structure</a></td>
+<td><a href="http://en.wikipedia.org/wiki/SQL">SQL</a></td>
 </tr>
 <tr>
 <td>MFR</td>
@@ -79,11 +79,6 @@
 </tr>
 </tbody>
 </table>
-
-<h2>
-<a id="other-resources" class="anchor" href="#other-resources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other resources</h2>
-
-<p><a href="http://hrrno.github.io/metadata/">HRR MetaData Development website</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/hrrno/metadata">HRR MetaData Repository</a> is maintained by <a href="https://github.com/hrrno">hrrno</a>.</span>
