Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HRR MetaData Repository by hrrno</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -77,6 +77,43 @@
 <td>MFR Data Quality Reports</td>
 <td>PDF, DOC</td>
 </tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>DÅR</td>
+<td><a href="https://github.com/hrrno/metadata/blob/master/registries/daar/norstore/norstore.xml">Dataset Metadata XML</a></td>
+<td>
+<a href="http://dublincore.org/">Dublin Core</a>, <a href="https://www.norstore.no/services/archive">Norstore</a>
+</td>
+</tr>
+<tr>
+<td>DÅR</td>
+<td><a href="https://github.com/hrrno/metadata/blob/master/registries/daar/data/structure/daar_all_fields.sql">DÅR Base Structure</a></td>
+<td><a href="http://en.wikipedia.org/wiki/SQL">SQL</a></td>
+</tr>
+<tr>
+<td>DÅR</td>
+<td>DÅR Structure and Variable Definition Scripts</td>
+<td>SQL</td>
+</tr>
+<tr>
+<td>DÅR</td>
+<td>DÅR Detailed Variable Documentation</td>
+<td>SQL, XML, PDF, DOC</td>
+</tr>
+<tr>
+<td>DÅR</td>
+<td>DÅR Variable Definitions</td>
+<td>SQL</td>
+</tr>
+<tr>
+<td>DÅR</td>
+<td>DÅR Data Quality Reports</td>
+<td>PDF, DOC</td>
+</tr>
 </tbody>
 </table>
 
@@ -91,4 +128,3 @@
   
   </body>
 </html>
-
